tree-sitter-aicad/grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.let_decl,
        $.const_decl,
        $.param_decl,
        $.fn_decl,
        $.struct_decl,
        $.enum_decl,
        $.part_decl,
        $.import_decl,
      ),

    // ---- declarations (`crates/cad-parser`'s `parse_item`) --------------

    let_decl: ($) =>
      seq(
        'let',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expr),
        ';',
      ),
    const_decl: ($) =>
      seq(
        'const',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expr),
        ';',
      ),
    param_decl: ($) =>
      seq(
        'param',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expr))),
        ';',
      ),

    fn_decl: ($) =>
      seq(
        optional(field('pure', 'pure')),
        'fn',
        field('name', $.identifier),
        optional(field('type_params', $.type_params)),
        '(',
        field('params', optional($.params)),
        ')',
        optional(seq('->', field('return_type', $._type))),
        field('body', $.block),
      ),
    params: ($) => seq($.param, repeat(seq(',', $.param)), optional(',')),
    param: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expr))),
      ),

    type_params: ($) => seq('<', $.identifier, repeat(seq(',', $.identifier)), optional(','), '>'),

    struct_decl: ($) =>
      seq(
        'struct',
        field('name', $.identifier),
        optional(field('type_params', $.type_params)),
        '{',
        field('fields', optional($.struct_fields)),
        '}',
      ),
    struct_fields: ($) => seq($.field, repeat(seq(',', $.field)), optional(',')),
    field: ($) => seq(field('name', $.identifier), ':', field('type', $._type)),

    enum_decl: ($) =>
      seq(
        'enum',
        field('name', $.identifier),
        optional(field('type_params', $.type_params)),
        '{',
        field('variants', optional($.enum_variants)),
        '}',
      ),
    enum_variants: ($) => seq($.enum_variant, repeat(seq(',', $.enum_variant)), optional(',')),
    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(field('payload', choice($.tuple_variant_payload, $.record_variant_payload))),
      ),
    tuple_variant_payload: ($) =>
      seq('(', optional(seq($._type, repeat(seq(',', $._type)), optional(','))), ')'),
    record_variant_payload: ($) => seq('{', optional($.struct_fields), '}'),

    part_decl: ($) =>
      seq('part', field('name', $.identifier), '{', field('items', repeat($._item)), '}'),

    import_decl: ($) =>
      seq(
        'import',
        field('path', $.import_path),
        optional(seq('::', '{', field('names', optional($.import_names)), '}')),
        ';',
      ),
    import_path: ($) => choice($.relative_import_path, $.package_import_path),
    relative_import_path: ($) =>
      seq(
        repeat(seq('..', '/')),
        '.',
        '/',
        $.identifier,
        repeat(seq('/', $.identifier)),
      ),
    package_import_path: ($) => seq($.identifier, repeat(seq('.', $.identifier))),
    import_names: ($) => seq($.identifier, repeat(seq(',', $.identifier)), optional(',')),

    // ---- types ------------------------------------------------------------

    _type: ($) => choice($.generic_type, $.identifier),
    block: ($) => seq('{', repeat($._stmt), '}'),

    _stmt: ($) =>
      choice(
        $.let_stmt,
        $.var_stmt,
        $.assign_stmt,
        $.if_stmt,
        $.for_stmt,
        $.while_stmt,
        $.loop_stmt,
        $.match_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.expr_stmt,
      ),

    let_stmt: ($) =>
      seq(
        'let',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expr),
        ';',
      ),
    assign_stmt: ($) => seq(field('name', $.identifier), '=', field('value', $._expr), ';'),
    if_stmt: ($) =>
      prec.dynamic(
        1,
        seq(
          'if',
          field('condition', $._expr_no_struct),
          field('consequence', $.block),
          optional(seq('else', field('alternative', choice($.block, $.if_stmt)))),
        ),
      ),
    for_stmt: ($) =>
      seq(
        'for',
        field('variable', $.identifier),
        'in',
        field('iterable', $._expr_no_struct),
        field('body', $.block),
      ),
    while_stmt: ($) =>
      seq('while', field('condition', $._expr_no_struct), field('body', $.block)),
    loop_stmt: ($) => seq('loop', field('body', $.block)),
    match_stmt: ($) =>
      prec.dynamic(
        1,
        seq(
          'match',
          field('scrutinee', $._expr_no_struct),
          '{',
          field('arms', repeat($.match_arm)),
          '}',
        ),
      ),
    return_stmt: ($) => seq('return', optional(field('value', $._expr)), ';'),
    break_stmt: () => seq('break', ';'),
    continue_stmt: () => seq('continue', ';'),

    // ---- expression-position control flow ------------------------------

    block_expr: ($) => seq('{', repeat($._stmt), optional(field('trailing', $._expr)), '}'),

    if_expr: ($) =>
      seq(
        'if',
        field('condition', $._expr_no_struct),
        field('consequence', $.block_expr),
        'else',
        field('alternative', choice($.block_expr, $.if_expr)),
      ),
    match_arm: ($) =>
      choice(
        prec.dynamic(
          1,
          seq(field('pattern', $.pattern), '=>', field('body', $.block_expr), optional(',')),
        ),
        seq(field('pattern', $.pattern), '=>', field('body', $._expr), ','),
      ),

    // ---- patterns -------------------------------------------------------

    pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.bool_literal,
        $.number_literal,
        $.string_literal,
        $.raw_string_literal,
        $.tuple_pattern,
        $.record_pattern,
        $.identifier,
      ),
    wildcard_pattern: () => '_',
    tuple_pattern: ($) =>
      seq(
        field('name', $.identifier),
        '(',
        optional(seq($.pattern, repeat(seq(',', $.pattern)), optional(','))),
        ')',
      ),
    record_pattern: ($) =>
      seq(field('name', $.identifier), '{', optional($.record_pattern_fields), '}'),
    record_pattern_fields: ($) =>
      seq($.record_pattern_field, repeat(seq(',', $.record_pattern_field)), optional(',')),
    record_pattern_field: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('pattern', $.pattern)))),

    // ---- shared/canonical expression leaves (always reset to the full,
    //      unrestricted `_a` hierarchy internally; identical regardless of
    //      which hierarchy's primary refers to them) --------------------

    paren_expr: ($) => seq('(', $._expr, ')'),
    list_expr: ($) =>
      seq('[', optional(seq($._expr, repeat(seq(',', $._expr)), optional(','))), ']'),
    call_expression: ($) =>
      seq(field('callee', $.identifier), '(', field('args', optional($.args)), ')'),
    args: ($) => seq($._arg, repeat(seq(',', $._arg)), optional(',')),
    _arg: ($) => choice($.named_arg, $._expr),
    named_arg: ($) => seq(field('name', $.identifier), '=', field('value', $._expr)),
    record_literal: ($) =>
      seq(field('name', $.identifier), '{', optional($.record_field_inits), '}'),
    record_field_inits: ($) =>
      seq($.record_field_init, repeat(seq(',', $.record_field_init)), optional(',')),
    record_field_init: ($) => seq(field('name', $.identifier), ':', field('value', $._expr)),

    // ---- expression entry points ----------------------------------------
    //
    // `_expr` (hierarchy `_a`): the default, fully unrestricted grammar —
    // let/const/param/field values, call/named args, list elements, record
    // field values, return values, range operands' partner side, etc.
    //
    // `_expr_no_struct` (hierarchy `_b`): `if`/`while`/`for`/`match`'s own
    // condition/iterable/scrutinee only (restriction 1). `block_expr`'s
    // trailing slot (restriction 2) reuses this same `_expr` — see the
    // module doc comment and the `if_stmt`/`match_stmt` `prec.dynamic`.
    _expr: ($) => $._range_a,
    _expr_no_struct: ($) => $._range_b,

    ...threadedHierarchy('a', true),
    ...threadedHierarchy('b', false),

    // ---- literals/identifiers -------------------------------------------

    number_literal: () =>
      token(
        seq(
          /[0-9]+/,
          optional(seq('.', /[0-9]+/)),
          optional(seq(/[eE][+-]?/, /[0-9]+/)),
          optional(/[\p{XID_Start}_][\p{XID_Continue}]*/),
        ),
      ),
    identifier: () => /[\p{XID_Start}_][\p{XID_Continue}]*/,

    line_comment: () => token(choice(seq('//', /[^/\n][^\n]*/), '//')),
    block_comment: () => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
    doc_comment: () => token(seq('///', /[^\n]*/)),
  },
});
